--- a/project_of_organizer/templates/base.html
+++ b/project_of_organizer/templates/base.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Organizer app</title>
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
 </head>
 <body>
 <div style="text-align: center"><img src="{% static '/logo.png'%}"></div>
@@ -15,7 +16,46 @@
         <p>You are logged as: {{ user.username }}</p>
         <p><a href="{% url 'logout' %}">Logout</a></p>
     {% endif %}</div>
-<h1>Organizer application</h1>
+<section class="dashboard-section">
+        <div class="row dashboard-nowrap">
+                <ul class="nav flex-column long-bg">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">
+                                <span>Home</span>
+                                <i class="fas fa-angle-right"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/sign_in/">
+                                <span>Sign in</span>
+                                <i class="fas fa-angle-right"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/create_family/">
+                                <span>Create family</span>
+                                <i class="fas fa-angle-right"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/recipe/add/">
+                                <span>Dodaj przepis</span>
+                                <i class="fas fa-angle-right"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/plan/add/">
+                                <span>Dodaj plan</span>
+                                <i class="fas fa-angle-right"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/plan/add-recipe/">
+                                <span>Dodaj przepis do planu</span>
+                                <i class="fas fa-angle-right"></i>
+                            </a>
+                        </li>
+                </ul></div></section>
 {% block content %}
 {% endblock %}
 </body>
