--- a/project_of_organizer/templates/families_list.html
+++ b/project_of_organizer/templates/families_list.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>Families</h2>
+    <ol>
 {% for family in families %}
-    {{ family.family_name }}, {{ family.family_code }}
+    <li>{{ family.family_name }}, {{ family.family_code }}</li>
     {%  endfor %}
-</form>
+</ol>
 {% endblock %}
