--- a/project_of_organizer/templates/base.html
+++ b/project_of_organizer/templates/base.html
@@ -47,6 +47,11 @@
                                 <span>Create activity</span>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/create_plan/">
+                                <span>Create plan</span>
+                            </a>
+                        </li>
                 </ul></div>
 {% block content %}
 {% endblock %}
