--- a/project_of_organizer/templates/base.html
+++ b/project_of_organizer/templates/base.html
@@ -56,6 +56,15 @@
                                 <span>Show plans</span>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/create_event/">
+                                <span>Create event</span>
+                            </a>
+                        </li><li class="nav-item">
+                            <a class="nav-link" href="/events/">
+                                <span>Show events</span>
+                            </a>
+                        </li>
                 </ul></div>
 {% block content %}
 {% endblock %}
