--- a/project_of_organizer/templates/plans_list.html
+++ b/project_of_organizer/templates/plans_list.html
@@ -3,13 +3,13 @@
 <h2>Plans in {{ family.family_name }} with {{ user.username }}</h2>
     <ol>
 {% for plan in plans %}
-    <li>{{ plan.user.username }}: {{ plan.activity.activity_name }}, {{ plan.day }}: {{ plan.start }} - {{ plan.finish }}</li>
+    <li>{{ plan.user.username }}: {{ plan.activity.activity_name }}, {{ plan.day }}: {{ plan.start }} - {{ plan.finish }}. {{ plan.extra_info }}</li>
     {%  endfor %}
 </ol>
     <h2>Events, where {{ user.username }} is participating</h2>
     <ol>
     {% for event in events %}
-    <li>{{ event.event.activity.activity_name }}, {{ event.event.day }}: {{ event.event.start }} - {{ event.event.finish }}</li>
+    <li>{{ event.event.activity.activity_name }}, {{ event.event.day }}: {{ event.event.start }} - {{ event.event.finish }}. {{ event.extra_info }}</li>
     {%  endfor %}
     </ol>
 {% endblock %}
